# vectormeta

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: architecture.md  metadata-reduction.md  testing.md  usage.md  vector-db-notes.md
examples/: clean_records.json  oversized_pinecone_records.json  vectormeta.yml
site/: index.html  styles.css
tests/: conftest.py  test_analyzer.py  test_cli.py  test_fixer.py  test_hydrate.py  test_io.py  test_sizing.py  test_validator.py
vectormeta/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  errors.py  fixer.py  hydrate.py  io.py  limits.py  models.py  reporting.py  sizing.py  validator.py
