[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vectormeta"
version = "0.1.0"
description = "Detect and fix oversized vector database metadata before upsert."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Achal Jain" }
]
keywords = [
  "vector-database",
  "metadata",
  "pinecone",
  "chroma",
  "qdrant",
  "weaviate",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.4",
  "types-PyYAML>=6.0",
]

[project.scripts]
vectormeta = "vectormeta.cli:app"

[project.urls]
Homepage = "https://github.com/Achal13jain/vectormeta"
Repository = "https://github.com/Achal13jain/vectormeta"
Issues = "https://github.com/Achal13jain/vectormeta/issues"

[tool.setuptools.packages.find]
include = ["vectormeta*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
packages = ["vectormeta"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
